# kaze

./: .gitignore  CMakeLists.txt  LICENSE.md
src/: CMakeLists.txt  main.cpp  main.qml
